<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageTownHouse1"
            android:layout_width="338dp"
            android:layout_height="174dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/town_house_1" />

        <TextView
            android:id="@+id/textViewTownHouse1"
            style="@style/DisplayTxt"
            android:layout_width="363dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:text="@string/txt_TownHouse1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageCondo1"
            app:layout_constraintVertical_bias="0.009" />

        <CheckBox
            android:id="@+id/checkBoxTownHouseVChbx1"
            android:layout_width="156dp"
            android:layout_height="27dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:text="Virtually"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.579"
            app:layout_constraintStart_toStartOf="parent"/>

        <CheckBox
            android:id="@+id/checkBoxTownHousePChbx1"
            android:layout_width="156dp"
            android:layout_height="27dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:text="Physically"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.579"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/imageTownHouse2"
            android:layout_width="270dp"
            android:layout_height="174dp"
            android:layout_marginTop="24dp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/town_house_2" />

        <TextView
            android:id="@+id/textViewTownHouse2"
            style="@style/DisplayTxt"
            android:layout_width="363dp"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:layout_gravity="center"
            android:text="@string/txt_TownHouse2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <CheckBox
            android:id="@+id/checkBoxTownHousePChbx2"
            android:layout_width="156dp"
            android:layout_height="27dp"
            android:layout_marginTop="12dp"
            android:layout_gravity="center"
            android:text="Physically"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.579"
            app:layout_constraintStart_toStartOf="parent"/>

        <CheckBox
            android:id="@+id/checkBoxTownHouseVChbx2"
            android:layout_width="156dp"
            android:layout_height="27dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:text="Virtually"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.579"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/imageTownHouse3"
            android:layout_width="292dp"
            android:layout_height="193dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="center"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/town_house_3" />

        <TextView
            android:id="@+id/textViewTownHouse3"
            style="@style/DisplayTxt"
            android:layout_width="363dp"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:layout_gravity="center"
            android:text="@string/txt_TownHouse3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <CheckBox
            android:id="@+id/checkBoxTownHousePChbx3"
            android:layout_width="156dp"
            android:layout_height="27dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:text="Physically"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.579"
            app:layout_constraintStart_toStartOf="parent"/>

        <CheckBox
            android:id="@+id/checkBoxTownHouseVChbx3"
            android:layout_width="156dp"
            android:layout_height="27dp"
            android:layout_marginTop="8dp"
            android:text="Virtually"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.579"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/buttonTownHouseNext"
            android:layout_width="211dp"
            android:layout_height="65dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="Next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.551"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="next_TownHouse_event"/>

    </LinearLayout>

</ScrollView>