<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageApartment1"
            android:layout_width="270dp"
            android:layout_height="174dp"
            android:layout_marginTop="36dp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/apartment_1" />

        <TextView
            android:id="@+id/textViewApartment1"
            style="@style/DisplayTxt"
            android:text="@string/txt_apartment1"
            android:layout_width="363dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageApartment1"
            app:layout_constraintVertical_bias="0.009" />

        <CheckBox
            android:id="@+id/checkBoxAptVChbx1"
            android:layout_width="156dp"
            android:layout_height="27dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:text="Virtually"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.579"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewApartment1" />

        <CheckBox
            android:id="@+id/checkBoxAptPChbx1"
            android:layout_width="156dp"
            android:layout_height="27dp"
            android:layout_marginTop="8dp"
            android:text="Physically"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.579"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxAptVChbx1" />

        <ImageView
            android:id="@+id/imageApartment2"
            android:layout_width="270dp"
            android:layout_height="174dp"
            android:layout_marginTop="24dp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxAptPChbx1"
            app:srcCompat="@drawable/apartment_2" />

        <TextView
            android:id="@+id/textViewApartment2"
            style="@style/DisplayTxt"
            android:text="@string/txt_apartment2"
            android:layout_width="363dp"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageApartment2" />

        <CheckBox
            android:id="@+id/checkBoxAptPChbx2"
            android:layout_width="156dp"
            android:layout_height="27dp"
            android:layout_marginTop="12dp"
            android:layout_gravity="center"
            android:text="Physically"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.579"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewApartment2" />


        <CheckBox
            android:id="@+id/checkBoxAptVChbx2"
            android:layout_width="156dp"
            android:layout_height="27dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:text="Virtually"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.579"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxAptPChbx2" />

        <ImageView
            android:id="@+id/imageApartment3"
            android:layout_width="292dp"
            android:layout_height="193dp"
            android:layout_marginTop="24dp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxAptVChbx2"
            app:srcCompat="@drawable/apartment_3" />

        <TextView
            android:id="@+id/textViewApartment3"
            style="@style/DisplayTxt"
            android:text="@string/txt_apartment3"
            android:layout_width="363dp"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageApartment3" />

        <CheckBox
            android:id="@+id/checkBoxAptPChbx3"
            android:layout_width="156dp"
            android:layout_height="27dp"
            android:layout_marginTop="16dp"
            android:text="Physically"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.579"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewApartment3" />

        <CheckBox
            android:id="@+id/checkBoxAptVChbx3"
            android:layout_width="156dp"
            android:layout_height="27dp"
            android:layout_marginTop="8dp"
            android:text="Virtually"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.579"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxAptPChbx3" />

        <Button
            android:id="@+id/buttonAptNext"
            android:layout_width="211dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="Next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.551"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxAptVChbx3"
            android:onClick="next_apartment_event"/>

    </LinearLayout>

</ScrollView>